variadics/tests/compile-fail-nightly/var_args_spread_middle.rs
../compile-fail/var_args_spread_middle.rs